--- a/Instructions/templates/index.html
+++ b/Instructions/templates/index.html
@@ -15,25 +15,132 @@
     <div class="jumbotron text-center">
       <!-- Render our data . {{text}} is a variable-->
       <h1>Mission to Mars</h1>
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">scrape new data!</a></p>
+      <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">scrape new data!</a></p>
     </div>
-
 
     <!-- News Section -->
+    <h3>Current Mars news</h3>
+    <h4>{{mars_data.title}}</h4>
+    <p>{{mars_data.paragraph}}</p>
+
+
+
+    <!-- Weather Section -->
     <div class="container">
-      <h3>Latest Mars News</h3>
-      <h4>{{mars_data.title}}</h4>
-      <p>{{mars_data.paragraph}}</p>
+      <h3>Current Mars Weather</h3>
+      <h4>{{mars_data.weather}}</h4>
+      <p></p>
     </div>
 
-      <p> Click <a href="bonus">here</a> to scrape new data</p>
-      <h2>{{ text }}</h2>
-      
+    <!-- Featured Image -->
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-7 col-md-12">
+          <div class="description-content">
+            <h1 class="description-header">Featured Mars Image</h1>
+          </div>
+          <hr>
+          <img src="{{mars_data.featured_image}}" width=650px alt="Featured Mars Image">
+        </div>
+      </div>
+    </div>
+
+    <!-- Mars Facts Table -->
+    <h2 class="title">Mars Facts</h2>
+    <hr>
+    <div class="row">
+      <div class="col-md-6">
+        <div>
+          <table>
+            {{mars_data.table|safe}}
+          </table>
+        </div>
+      </div>
     </div>
 
 
+    <!-- Mars Hemispheres-->
+    <div class="container">
+      <div class="row">
+        <h2 class="title">Mars Hemispheres</h2>
+        <hr>
+        <div class="row">
+          <div class="col-lg-3">
+          </div>
+          <div class="col-lg-6">
+            <div class="card" style="width: 40rem;">
+              <a href="{{ mars_data.hemi_image[0].img_url }}">
+                <img class="card-img-top" src="{{ mars_data.hemi_image[0].img_url }}" width=400px
+                  alt="{{ mars_data.hemi_image[0].img_url }}">
+              </a>
+              <div class="card-body">
+                <h4 class="card-text text-center">{{ mars_data.hemi_image[0].title }}</h4>
+              </div>
+            </div>
+          </div>
+        </div>
 
-  </div>
+        <div class="row">
+          <div class="col-lg-3">
+          </div>
+          <div class="col-lg-6">
+            <div class="card" style="width: 40rem;">
+              <a href="{{ mars_data.hemi_image[1].img_url }}">
+                <img class="card-img-top" src="{{ mars_data.hemi_image[1].img_url }}" width=400px
+                  alt="{{ mars_data.hemi_image[1].img_url }}">
+              </a>
+              <div class="card-body">
+                <h4 class="card-text text-center">{{ mars_data.hemi_image[1].title }}</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-3">
+          </div>
+          <div class="col-lg-6">
+            <div class="card" style="width: 40rem;">
+              <a href="{{ mars_data.hemi_image[2].img_url }}">
+                <img class="card-img-top" src="{{ mars_data.hemi_image[2].img_url }}" width=400px
+                  alt="{{ mars_data.hemi_image[2].url }}">
+              </a>
+              <div class="card-body">
+                <h4 class="card-text text-center">{{ mars_data.hemi_image[2].title }}</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-3">
+          </div>
+          <div class="col-lg-6">
+            <div class="card" style="width: 40rem;">
+              <a href="{{ mars_data.hemi_image[3].img_url }}">
+                <img class="card-img-top" src="{{ mars_data.hemi_image[3].img_url }}" width=400px
+                  alt="{{ mars_data.hemi_image[3].img_url }}">
+              </a>
+              <div class="card-body">
+                <h4 class="card-text text-center">{{ mars_data.hemi_image[3].title }}</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!--Bootstrap-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
